clusters/tayacluster/infrastructure/cloudflared/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-cloudflared-to-ingress
  namespace: cloudflared
spec:
  endpointSelector:
    matchLabels:
      app: cloudflared
  egress:
    - toServices:
        - k8sService:
            serviceName: cilium-ingress
            namespace: kube-system
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
    - toFQDNs:
        - matchPattern: "*.argotunnel.com"
    - toEntities:
        - world
